jilles      2006/05/25 01:12:42 UTC	(20060525-5307)
  Log:
  - Make saslserv() static as we don't need it outside main.c
  - Fix /msg (null) help <command> in help
  - Don't use abbreviated command listing as saslserv will
    have few commands.
  

  Changes:	Modified:
  +1 -1		trunk/modules/saslserv/help.c (File Modified) 
  +3 -1		trunk/modules/saslserv/main.c (File Modified) 


jilles      2006/05/25 01:02:29 UTC	(20060525-5305)
  Log:
  Compile fix.
  

  Changes:	Modified:
  +1 -1		trunk/modules/saslserv/help.c (File Modified) 


gxti        2006/05/24 04:03:06 UTC	(20060524-5303)
  Log:
  SaslServ command/help framework added (no docs yet).
  Pulled pubkey from makefile due to incompleteness and deps.
  Pubkey now works somewhat with RSA, not with DSA just yet.
  

  Changes:	Modified:
  +1 -1		trunk/modules/saslserv/Makefile.in (File Modified) 
  +71 -0	trunk/modules/saslserv/help.c (File Added) 
  +4 -1		trunk/modules/saslserv/main.c (File Modified) 
  +133 -104	trunk/modules/saslserv/pubkey.c (File Modified) 


gxti        2006/05/24 04:01:35 UTC	(20060524-5301)
  Log:
  PLAIN auth now a little cleaner/safer.
  

  Changes:	Modified:
  +6 -6		trunk/modules/saslserv/plain.c (File Modified) 


jilles      2006/05/23 22:11:24 UTC	(20060523-5299)
  Log:
  Rerun autoconf.
  

  Changes:	Modified:
  +6 -6		trunk/configure (File Modified) 


jilles      2006/05/23 22:10:54 UTC	(20060523-5297)
  Log:
  Change effect of --disable-sasl: it now prevents make
  from entering modules/saslserv/ at all. This way the
  list of sasl source files can live in modules/saslserv/Makefile.in
  instead of in configure.ac.
  

  Changes:	Modified:
  +3 -3		trunk/configure.ac (File Modified) 
  +1 -1		trunk/modules/Makefile.in (File Modified) 
  +3 -3		trunk/modules/saslserv/Makefile.in (File Modified) 


jilles      2006/05/23 22:01:30 UTC	(20060523-5295)
  Log:
  Rerun autoconf and autoheader.
  

  Changes:	Modified:
  +4 -4		trunk/configure (File Modified) 